--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ phases:
       - mvn --version
   build:
     commands:
-      - echo Building project...
-      - mvn clean package
+      - echo Building only servlet-http2 module...
+      - mvn install -rf :servlet-http2
 artifacts:
   files:
     - servlet/http2/target/*.war
