--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - echo Building only servlet-http2 module...
-      - mvn install -rf :servlet-http2
+      - mvn install -rf :servlet-http2 -DskipTests
 artifacts:
   files:
     - servlet/http2/target/*.war
